Wygenerowanie nowej usługi do operacji CRUD transakcji przez OpenAPI Generator
